# temporary_files

./: README.md
clrn/: main.c
help/: CMakeLists.txt
help/inc/: .car.h.swp  car.h  storage.h
help/src/: .main.c.swo  .main.c.swp  car.c  main.c  storage.c
learn/: CMakeLists.txt
learn/src/: client.h  dirwork.c  dirwork.h  dynamicalloc.c  dynamicalloc.h  filework.c  filework.h  heapsort.c  heapsort.h  iolearn.c  iolearn.h  macroloop.h  main.c  queue.c  queue.h  server.c  server.h  structlearn.c  structlearn.h  thrd.c  thrd.h  tree.c  tree.h  wcharlearn.c  wcharlearn.h
